@@ -1,6 +1,7 @@
 Version 1.7.13+svn:
  * Graphics:
    * Fix bug 15344 : missing ice to nothing transition
+   * Fix weird side effect of long first frame in standing anims
  * Language and i18n:
    * Updated translations: Czech , Italian
  * Multiplayer
